# rsfMRI-GAT-MDD

./: .envrc  SITE_EFFECT_GUIDE.md  pyproject.toml
backup/: gat_model.py  gat_model_quick.py  main.py  preprocess_timeseries.py  subject_label_map.csv  test_graph_conversion.py
backup/processed/: rest_meta_mdd_fc.npz
notes/: git.md  val_auc.md  分析结果.md  图注意力网络.md  在fMRI（功能磁共振成像）研究中，ROI 是 Region of Interest 的缩写，中文意思是 “感兴趣区” 或 “感兴趣区域”。.md  实验步骤.md
outputs/: label.csv
outputs/baseline_cv_formal_grouped_seed42/: baseline_cv_metrics.json
outputs/baseline_cv_smoke_grouped/: baseline_cv_metrics.json
outputs/baseline_cv_smoke_stratified/: baseline_cv_metrics.json
outputs/gat_cv_formal/: cv_metrics.json  important_edges.csv  important_edges_mapped.csv  network_pair_stats.csv
outputs/gat_cv_formal_grouped/: cv_metrics.json
outputs/gat_cv_formal_grouped_es_lr/: cv_metrics.json
outputs/gat_cv_formal_stratified_combat_seed42/: cv_metrics.json
outputs/gat_cv_formal_stratified_seed42/: cv_metrics.json
outputs/gat_cv_smoke/: cv_metrics.json  (+1 more)
processed/: rest_meta_mdd_fc.npz  timeseries_overview.csv
record/: txt
scripts/: command_bash.txt  command_cmd.txt  command_fish.txt  command_pwsh.txt  compare_site_effects.py  eval_site_balance.py
src/: build_fc_dataset.py  explain_edges.py  explain_edges_split.py  fc_to_graph_dataset.py  label_overview.py  map_and_summarize_edges.py  show_timeseries_slice.py  site_balance_validator.py  site_harmonization.py  timeseries_overview.py  train_baseline_cv.py  train_gat_cv.py  train_gat_loso.py  train_gat_split.py
(+81 files in other folders)
