[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
